# hear-ui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SYSTEM_DESIGN.md  USER_MANUAL.md
.devcontainer/: docker-compose.devcontainer.yml
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: backend_pre_start.py  main.py
backend/app/alembic/versions/: f3a1_drop_legacy_user_item_tables.py  g4b2_add_patient_indexes.py
backend/app/api/: deps.py
backend/app/api/routes/: explainer.py  feedback.py  model_card.py  patients.py  predict.py  predict_batch.py  utils.py
backend/app/config/: README.md  feature_definitions.json
backend/app/config/model_cards/: v3_randomforest_2026-02-17.json
backend/app/core/: alternative_explainers.py  background_data.py  config.py  explainer_interface.py  explanation_service.py  feature_config.py  model_adapter.py  model_wrapper.py  rf_dataset_adapter.py  shap_explainer.py
backend/app/db/: base.py  connection.py  crud.py  models.py
backend/app/models/: __init__.py  feedback.py  patient_record.py  prediction.py
backend/app/models/model_card/: model_card.py
backend/app/tests/: conftest.py  test_api_routes.py  test_config.py  test_coverage_boost2.py  test_coverage_enhancement.py  test_health_check.py  test_main_app.py  test_model_wrapper_new.py  test_patients_helpers_coverage.py  test_patients_search.py  test_predict_batch_utils.py  test_predict_vs_explainer_consistency.py  test_prediction_consistency.py  test_shap_integration.py  test_targeted_coverage.py
backend/app/tests/api/routes/: test_explainer.py  test_model_card_routes.py
backend/app/utils/: __init__.py
backend/scripts/: lint.sh
docker/: DOCKER_QUICKREF.md  docker-compose.override.yml  docker-compose.yml
docs/: SYSTEM_DESIGN.md
frontend/: .dockerignore  Dockerfile  README.md  biome.json  frontend-i18n.md  nginx-global.conf  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.vue  README.md  i18n.ts  main.ts  utils.ts  vite-env.d.ts
frontend/tests/: create-patient.ui.spec.ts  (+3 more)
scripts/: demo_config_adapter.py  export_openapi.py
(+45 files in other folders)
